--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.27",
     "mailgun.js": "^8.0.2",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
